fix: modify factory