@@ -7,11 +7,12 @@ import com.example.demo.vo.ResultInfo;
 import com.example.demo.vo.Rule;
 import com.example.demo.vo.RuncardRawInfo;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
-import java.util.Collections;
 import java.util.Map;
 
+@Slf4j
 @Component
 @RequiredArgsConstructor
 public class RuleWaferCondition implements IRuleCheck {
@@ -19,26 +20,53 @@ public class RuleWaferCondition implements IRuleCheck {
     private final DataLoaderService dataLoaderService;
 
     @Override
-    public ResultInfo check(RuncardRawInfo runcardRawInfo, Rule rule) {
+    public ResultInfo check(String cond, RuncardRawInfo runcardRawInfo, Rule rule) {
+        log.info("RuncardID: {} Condition: {} - Start RuleWaferCondition check",
+                runcardRawInfo.getRuncardId(), cond);
+
         ResultInfo info = new ResultInfo();
         info.setRuleType(rule.getRuleType());
 
         if (RuleUtil.isLotTypeEmpty(rule)) {
+            log.info("RuncardID: {} Condition: {} - lotType is empty => skip check",
+                    runcardRawInfo.getRuncardId(), cond);
+
             info.setResult(0);
-            info.setDetail(Collections.singletonMap("msg", "lotType is empty => skip check"));
+            Map<String, Object> detail = Map.of(
+                    "msg", "lotType is empty => skip check",
+                    "runcardId", runcardRawInfo.getRuncardId(),
+                    "condition", cond
+            );
+            info.setDetail(detail);
             return info;
         }
 
         if (RuleUtil.isLotTypeMismatch(runcardRawInfo, rule)) {
+            log.info("RuncardID: {} Condition: {} - lotType mismatch => skip check",
+                    runcardRawInfo.getRuncardId(), cond);
+
             info.setResult(0);
-            info.setDetail(Collections.singletonMap("msg", "lotType mismatch => skip check"));
+            Map<String, Object> detail = Map.of(
+                    "msg", "lotType mismatch => skip check",
+                    "runcardId", runcardRawInfo.getRuncardId(),
+                    "condition", cond
+            );
+            info.setDetail(detail);
             return info;
         }
 
         WaferCondition wc = dataLoaderService.getWaferCondition();
         if (wc == null) {
+            log.info("RuncardID: {} Condition: {} - No WaferCondition data => skip",
+                    runcardRawInfo.getRuncardId(), cond);
+
             info.setResult(3);
-            info.setDetail(Collections.singletonMap("error", "No WaferCondition data => skip"));
+            Map<String, Object> detail = Map.of(
+                    "error", "No WaferCondition data => skip",
+                    "runcardId", runcardRawInfo.getRuncardId(),
+                    "condition", cond
+            );
+            info.setDetail(detail);
             return info;
         }
 
@@ -48,14 +76,22 @@ public class RuleWaferCondition implements IRuleCheck {
         boolean isEqual = (uniqueCount == wfrQty);
         int lamp = isEqual ? 1 : 3;
 
-        info.setResult(lamp);
+        log.info("RuncardID: {} Condition: {} - WaferCondition => uniqueCount={}, wfrQty={}, finalLamp={}",
+                runcardRawInfo.getRuncardId(), cond, uniqueCount, wfrQty, lamp);
+
         Map<String, Object> detailMap = Map.of(
                 "result", lamp,
                 "waferCondition", isEqual,
                 "wfrQty", wfrQty,
-                "experimentQty", uniqueCount
+                "experimentQty", uniqueCount,
+                "runcardId", runcardRawInfo.getRuncardId(),
+                "condition", cond
         );
+        info.setResult(lamp);
         info.setDetail(detailMap);
+
+        log.info("RuncardID: {} Condition: {} - RuleWaferCondition done, lamp={}",
+                runcardRawInfo.getRuncardId(), cond, lamp);
 
         return info;
     }
